Fixed spacing issue on meal card

--- a/frontend/gui/src/containers/index.css
+++ b/frontend/gui/src/containers/index.css
@@ -349,7 +349,7 @@ a:hover, a:active{
     height: 64px;
     /* bc the ant card body doesnt start at the top */
     margin: -11px -10px 0 -10px;
-    padding: 5px 8px 0 8px;
+    padding: 5px 10px 0 10px;
     cursor: pointer;
 }
 
